--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-asdf
+
+<header>
+header
+</header>
+
+<div class="contailer">
 <%= yield %>
+</div>
+
+<footer>
+footer
+</footer>
 
 </body>
 </html>
