--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bbicou</title>
+  <title>삐약쿠폰</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -13,10 +13,10 @@ header
 </header>
 
 <div class="contailer">
-<%= yield %>
+	<%= yield %>
 </div>
 
-<footer>
+<footer class="row">
 footer
 </footer>
 
