--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
 <body>
 
 <header>
-header
+	<div id="logo"><%= image_tag 'logo_mini.png' , :alt => '병아리그림' %></div>
 </header>
 
-<div class="contailer">
+<div class="container">
 	<%= yield %>
 </div>
 
