--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="tabmenu">
+	<a href="#none" class="active">극장별</a><a href="#none">지역별</a>
+</div>
+<div class="tabview">
+	<ul class="thumbnail">
+		<li class="list">
+			<a href="#">
+				<div class="">
+					메가박스
+					<p>파주,일산지역 메가박스 할인 쿠폰<br><i class="fa fa-arrow-circle-right"></i> 바로가기</p>
+				</div>
+			</a>
+		</li>
+	</ul>
+</div>
