--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,13 +13,30 @@
  *= require_tree .
  *= require_self
  */
-@import "font-awesome";
+ @import "font-awesome";
+
 *{
 	margin:0;
 	padding:0;
+	font-family:sans-serif;
 }
 header{
 	background:#000;
+	padding:15px;
+	overflow:hidden;
+}
+	#logo{
+		color:#fff;
+	}
+		#logo strong{
+			position:relative;
+			top:-2px;
+			margin-left:3px;
+			font-size:16px;
+		}
+header i{
+	cursor:pointer;
+	display:block;
 }
 .container{
 	background:#ffdc32;
