--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -5,6 +5,18 @@ a{
 li{
 	list-style:none;
 }
+.main-color{
+	color:#ffdc32!important;
+}
 .row{
 	clear:both;
+}
+.text-right{
+	text-align:right;
+}
+.pull-left{
+	float:left;
+}
+.pull-right{
+	float:right;
 }
