--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,22 +2,51 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.tabgroup{
+	border:1px solid #000;
+	overflow:hidden;
+	clear:both;
+}
 .tabmenu{
-	border-top:2px solid #000
+	border-top:2px solid #000;
+	clear:both
 }
 .tabmenu a{
 	display:inline-block;
 	width:50%;
 	text-align:center;
-	background:#fff;
-	color:#000;
-	padding:10px 0
+	background:#000;
+	color:#fff;
+	padding:15px 0
 }
 .tabmenu a.active{
-	background:#000;
-	color:#fff
+	background:#fff;
+	color:#000
+}
+.tabview{
 }
 .tabview li{
 	background:#fff;
-	clear:both
+	clear:both;
+	overflow:hidden;
+}
+.tabview li a{
+	display:block;
+	border-bottom:1px solid #000;
+	padding:10px 0;
+	overflow:hidden
+}
+.tabview .pull-left{
+	width:30%;
+	text-align:center;
+}
+.tabview .pull-right{
+	width:70%
+}
+.tabview .pull-right strong{
+	font-size:1.2em
+}
+.tabview .pull-right p{
+	font-size:12px;
+	color:#333
 }
