--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,15 +1,53 @@
-<div class="tabmenu">
-	<a href="#none" class="active">극장별</a><a href="#none">지역별</a>
+<div class="page-head">
+	<div class="pull-left" style="width:50%;">
+		<h1>안녕하세요</h1>
+		<p>삐약쿠폰에 오신 것을 환영 합니다<br>여러분의 많은 참여 부탁드립니다</p>
+	</div>
+	<div class="pull-right text-right" style="width:50%;"><%= image_tag 'bbicou.png', :alt => 'bbicou', :height => '50%', :width => '50%' %></div>
 </div>
-<div class="tabview">
-	<ul class="thumbnail">
-		<li class="list">
-			<a href="#">
-				<div class="">
-					메가박스
-					<p>파주,일산지역 메가박스 할인 쿠폰<br><i class="fa fa-arrow-circle-right"></i> 바로가기</p>
-				</div>
-			</a>
-		</li>
-	</ul>
+
+
+<div class="tabgroup">
+	<div class="tabmenu">
+		<a href="#none" class="active">극장별</a><a href="#none">지역별</a>
+	</div>
+	<div class="tabview">
+		<ul class="thumbnail">
+			<li class="list">
+				<a href="#">
+					<div class="pull-left">
+						<%= image_tag 'ico_megabox' ,:alt => 'megabox'  %>
+					</div>
+					<div class="pull-right">
+						<strong>메가박스</strong>
+						<p>파주,일산지역 메가박스 할인 쿠폰<br><i class="fa fa-arrow-circle-right"></i> 바로가기</p>
+					</div>
+				</a>
+			</li>
+			<li class="list">
+				<a href="#">
+					<div class="pull-left">
+						<%= image_tag 'ico_megabox' ,:alt => 'megabox'  %>
+					</div>
+					<div class="pull-right">
+						<strong>메가박스</strong>
+						<p>파주,일산지역 메가박스 할인 쿠폰<br><i class="fa fa-arrow-circle-right"></i> 바로가기</p>
+					</div>
+				</a>
+			</li>
+			<li class="list">
+				<a href="#">
+					<div class="pull-left">
+						<%= image_tag 'ico_megabox' ,:alt => 'megabox'  %>
+					</div>
+					<div class="pull-right">
+						<strong>메가박스</strong>
+						<p>파주,일산지역 메가박스 할인 쿠폰<br><i class="fa fa-arrow-circle-right"></i> 바로가기</p>
+					</div>
+				</a>
+			</li>
+		</ul>
+	</div>
 </div>
+
+<div class="text-right">LAST UPDATED 2015.08.02</div>
