--- a/app/views/coupons/show.html.erb
+++ b/app/views/coupons/show.html.erb
@@ -6,8 +6,13 @@
 </p>
 
 <p>
-  <strong>Location:</strong>
-  <%= @coupon.location %>
+  <strong>Theater:</strong>
+  <%= @coupon.theater %>
+</p>
+
+<p>
+  <strong>기간:</strong>
+  <%= @coupon.date %>
 </p>
 
 <p>
