--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,16 @@
 <body>
 
 <header>
-	<div id="logo" class="pull-left">
-		<%= image_tag 'logo_mini.png' ,:width => '20' ,:height => '18' %>
-		<strong><span class="main-color">삐약쿠폰</span> 8월</strong>
-	</div>
-	<div class="pull-right">
-		<i class="fa fa-user" style="color:#fff"></i>
+	<div class="wrap">
+		<div id="logo" class="pull-left">
+			<%= image_tag 'logo_mini.png' ,:width => '20' ,:height => '18' %>
+			<a href="/bbicou">
+			<strong><span class="main-color">삐약쿠폰</span> 8월</strong>
+			</a>
+		</div>
+		<div class="pull-right">
+			<i class="fa fa-align-justify" style="color:#fff"></i>
+		</div>
 	</div>
 </header>
 
@@ -24,7 +28,10 @@
 </div>
 
 <footer class="row">
-footer
+삐약쿠폰은 로컬 지역 쿠폰입니다.<br>
+어떠한 법적 책임도 없음을 밝힙니다.<br>
+회원 여러분의 많은 참여 부탁드립니다<br>
+사랑합니다 고객님
 </footer>
 
 </body>
