--- a/app/views/coupons/_form.html.erb
+++ b/app/views/coupons/_form.html.erb
@@ -16,9 +16,23 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :location %><br>
-    <%= f.text_field :location %>
+    <%= f.label :date %><br>
+    <%= f.text_field :date %>
   </div>
+  <div class="field">
+    <%= f.label :theater %><br>
+   <%= f.select :theater, [['Please select an option', nil], ['메가박스','megabox'], ['롯데시네마','lotte'],['CGV','cgv']] %>
+  </div>
+
+  <!--
+  <div class="field">
+    <select name="location">
+        <option value="ilsan">일산</option>
+        <option value="paju">파주</option>
+        <option value="seoul">서울</option>
+        <option value="etc">기타</option>
+      </select>
+  </div>-->
   <div class="form-group">
     <%= f.file_field :picture %>
     <%= f.hidden_field :picture_cache %>
