--- a/app/views/coupons/index.html.erb
+++ b/app/views/coupons/index.html.erb
@@ -6,7 +6,7 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Location</th>
+      <th>theater</th>
       <th>Image</th>
       <th>Description</th>
       <th colspan="3"></th>
@@ -17,7 +17,7 @@
     <% @coupons.each do |coupon| %>
       <tr>
         <td><%= coupon.title %></td>
-        <td><%= coupon.location %></td>
+        <td><%= coupon.theater %></td>
         <td><%= coupon.image %></td>
         <td><%= coupon.description %></td>
         <td><%= link_to 'Show', coupon %></td>
